style.css
:root {
    --home-page-text-color: white;

    --background-color-1: black;
    --header-color-1: white;
    --paragraph-color-1: gray;

    --background-color-2: white;
    --header-color-2: black;
    --paragraph-color-2: gray;

    --button-background-color-1: white;
    --button-text-color-1: black;

    --link-hover-color: #773080;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: Arial, Helvetica, sans-serif;
}

h1 {
    font-size: 4rem;
    font-weight: bold;
}

h2 {
    font-size: 3rem;
    font-weight: bold;
}

h3 {
    font-size: 2rem;
}

p {
    font-size: 1.2rem;
}

a {
    font-size: 1rem;
    font-weight: bold;
    text-decoration: none;
}

a:hover {
    color: var(--link-hover-color) !important;
}

.content-row {
    max-width: 1000px;
    margin: 0 auto;
}

/* Home Page */
#home-page {
    background-image: url("./images/space.jpg");
    height: 100vh;
    color: var(--home-page-text-color);
}

#home-page header {
    position: absolute;
    width: 100%;
    padding: 5px;
}

#home-page header ul {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
    list-style: none;
}

#home-page header li {
    padding: 10px;
    margin: 10px;
}

#home-page header a {
    color: var(--home-page-text-color);
    text-transform: uppercase;
}

/* #home-page header a:hover {
    color: var(--link-hover-color);
} */

#main-page-content {
    width: 100%;
    height: 100%;

    display: flex;
    justify-content: center;
    flex-direction: column;

    text-align: center;
}

#main-page-content h1 {
    margin: 10px;
}

#main-page-content p {
    font-size: 1rem;
    font-weight: bold;
    margin: 10px;
}

#main-page-content a {
    font-size: 2rem;
    margin: 10px;
    color: var(--home-page-text-color);
}

/* #main-page-content a:hover {
    color: var(--link-hover-color);
} */

/* About Page */
#about-page h2, #about-page h3 {
    color: var(--header-color-1);
}

#about-page p {
    color: var(--paragraph-color-1);
}

#about-page-wrapper {
    display: flex;
    justify-content: center;
    background-color: var(--background-color-1);
}

#about-page {
    display: flex;
    flex-direction: column;
    align-items: center;

    text-align: center;

    max-width: 1000px;
}

#profile-skills {
    display: flex;
    flex-direction: column;
}

@media (min-width: 750px) {
    #profile-skills {
        flex-direction: row;
    }
}

#profile-skills ul {
    color: var(--paragraph-color-1);
    
}

#about-page div {
    margin: 20px;
}

#about-page > a {
    padding: 15px 60px;
    margin: 20px;
    border-radius: 5px;
    background-color: var(--button-background-color-1);
    color: var(--button-text-color-1);
}

/* Projects Page */
#projects-page-wapper {
    background-color: var(--background-color-2);
}

#projects-page {
    padding: 20px;
}

#projects-page h2 {
    text-align: center;
    color: var(--header-color-2);
}

#projects-container {
    width: 100%;
}

#projects-container a {
    display: block;
    position: relative;
    outline: 0;
    cursor: pointer;
}

#projects-container > div {
    position: relative;
    float: left;
    width: 100%;
    padding: 20px;
}

#projects-container img {
    border-radius: 5px;
    box-shadow: 1px 1px;
    box-shadow: 0 0 4px;
}

#projects-container .overlay {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    border-radius: 5px;
}

#projects-container .overlay h4 {
    display: none;
    color: white;
    margin: 10px;
    font-size: 1rem;
}

#projects-container a:hover .overlay h4 {
    display: block;
}

#projects-container a:hover .overlay {
    background-color: rgba(0, 0, 0, 0.7);
}

.plus-icon-div {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;
}

.plus-icon-div i {
    display: none;
}

#projects-container a:hover .plus-icon-div i {
    font-size: 25px;
    color: white;
    display: inline;
}

@media (min-width: 750px) {
    #projects-container > div {
        width: 33.33%;
    }
}

#projects-container img {
    width: 100%;
    display: block;
}

/* Useful for displaying the preview of each project */

.gray-out-screen {
    position: fixed;
    width: 100vw;
    height: 100vh;
    left: 0;
    top: 0;
    background-color: rgba(0, 0, 0, 0.7);
    z-index: 2;
}

.project-details {
    position: fixed;
    max-width: 750px;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    padding: 10px;

    background-color: var(--background-color-2);
    /* box-shadow: 0 0 5px white; */
    border-radius: 5px;
    z-index: 3;
}

.project-details h2 {
    text-align: center;
}

.project-details p {
    color: var(--paragraph-color-2);
    margin: 10px;
}

.project-languages {
    margin: 10px;
}

.project-details div i {
    margin-right: 10px;
}

.project-details a {
    color: white;
    background-color: gray;
    margin-right: 10px;
    padding: 5px 10px;
    border-radius: 2px;
}

.project-links {
    margin: 10px;
    margin-top: 20px;
}

.hidden {
    display: none !important;
}

/* Contact Page */
#contact-page-wrapper {
    background-color: var(--background-color-1);
}

#contact-page {
    padding: 10px;
}

#contact-page h2 {
    color: var(--header-color-1);
    text-align: center;
}

#contact-methods-container {
    width: 100%;
    margin: 10px;
    color: var(--paragraph-color-1);
    text-align: center;

    display: flex;
    justify-content: space-around;
    flex-direction: column;
}

@media (min-width: 750px) {
    #contact-methods-container {
        flex-direction: row;
    }

    #contact-methods-container p {
        display: inline;
    }

    #contact-methods-container div i {
        font-size: 1.5rem;
    }
}

#contact-methods-container i {
    color: var(--header-color-1);
    font-size: 2rem;
}

#contact-methods-container p {
    margin: 10px;
}

